[package]
name = "gaspipe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
ethers = { git = "https://github.com/gakonst/ethers-rs", features = ["ws"] }
forge = { git = "https://github.com/foundry-rs/foundry", version = "0.2.0" }
foundry-common = { git = "https://github.com/foundry-rs/foundry", version = "0.1.0" }
foundry-config = { git = "https://github.com/foundry-rs/foundry", version = "0.2.0" }
foundry-evm = { git = "https://github.com/foundry-rs/foundry", version = "0.2.0" }
futures = "0.3.21"
hex = "0.4.3"
parking_lot = "0.12.1"
rocket = { verion = "0.5.0-rc.2", features = ["json"] }
structopt = { version = "0.3.26", features = ["paw"] }
tokio = "1.20.0"
